classDiagram

direction TB
    class LoadAudioFile{

        +AudioArray, sample_rate
        +load_audio(file_path, target_sr=22050, mono=True)
        
    }

    class SpectralFluxCalculator{

        self.calculated_FLUX = calculated_stft
        
        +logarithmic_Magnitude(self)
        +calculate_spectral_flux(self)
        +plot_spectral_flux(calculated_FLUX, title="Spectral Flux")

    }

    class PeakPicking{
        flux_array

        +calculate_adaptive_threshold(self, window_size, delta)
        +find_peaks(self, window_size=10, delta=0.1, wait=5)

    }

    class AudioToMidi{
        +aduio
        +stft
        +runfile(pathToFile)
    }

    class MidiExport{
        bpm
        seconds_to_ticks(self, seconds)
        plot_spectrogram(self,title="Spectrogram")

    }

    class Filter{
        stft
        onsets_Kick
        onsets_Snare
        onsets_HiHat

        +findKick()
        +findSnare()
        +findHihat()
    }

    class  LoadSTFT{
        +calculated_stft
        +calculate_STFT(AudioArray, sample_rate, n_fft, hop_length)
        +plot_spectrogram(stft_result, sample_rate, hop_length, title="Spectrogram")
    }

    AudioToMidi *-- LoadAudioFile
    AudioToMidi *-- LoadSTFT
    AudioToMidi *-- SpectralFluxCalculator
    AudioToMidi *-- MidiExport
    AudioToMidi *-- PeakPicking
    
